--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^1.2.1
   google_fonts: ^3.0.1
   scaffold_gradient_background: ^1.0.3+1
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
